--- a/blackjack.html
+++ b/blackjack.html
@@ -1,57 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Blackjack</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Blackjack - JackBlack</title>
 <style>
-body { 
-    background-image: url('https://i.imgflip.com/5lc1pb.jpg');
-    background-size: cover; background-position: center; font-family: Arial, sans-serif; text-align:center; color:white;
+body {
+  margin:0; font-family:Arial, sans-serif; text-align:center;
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+  background-size: 400% 400%;
+  animation: backgroundGradient 15s ease infinite;
+  color: white;
 }
-#balance{ font-size:24px; margin:20px; }
-button{ font-size:16px; padding:10px; margin:10px; cursor:pointer; }
-#blackjackResult{ font-size:20px; margin-top:20px; }
+@keyframes backgroundGradient {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
+h1 {
+  font-size:3em; margin-top:20px; text-shadow: 2px 2px 4px #000;
+}
+#balance {
+  font-size:24px; margin:20px;
+}
+button {
+  font-size:16px; padding:12px 24px; margin:10px; border:none; border-radius:8px; cursor:pointer;
+  background: linear-gradient(135deg, #f7971e, #ffd200);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  transition: all 0.2s;
+}
+button:hover {
+  transform: scale(1.05);
+  background: linear-gradient(135deg, #f2994a, #ffc107);
+}
+#blackjackResult {
+  font-size:20px; margin-top:20px; min-height:50px;
+  transition: all 0.3s ease;
+}
+#cardContainer {
+  display:flex; justify-content:center; margin-top:20px;
+}
+.card {
+  width:80px; height:120px; margin:0 10px;
+  border-radius:8px; background:#fff; color:#000; font-size:48px;
+  display:flex; align-items:center; justify-content:center;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  font-family:Arial, sans-serif;
+  transition: all 0.3s ease;
+}
+@keyframes dealAnimation {
+  0% {transform: translateY(-200px); opacity:0;}
+  50% {transform: translateY(20px); opacity:1;}
+  100% {transform: translateY(0); opacity:1;}
+}
 </style>
 </head>
 <body>
-<h1>Blackjack - Dealer: JackBlack</h1>
-<div id="balance">Balance: $0</div>
-<input type="number" id="blackjackBet" placeholder="Bet amount">
+
+<h1>Blackjack - JackBlack</h1>
+<div id="balance">Balance: $<span id="balanceAmount">0</span></div>
+<input type="number" id="betInput" placeholder="Bet amount" min="1" />
 <button id="dealBtn">Deal</button>
+
+<div id="cardContainer"></div>
 <div id="blackjackResult"></div>
-<br><button onclick="location.href='index.html'">Back to Menu</button>
-<audio id="gamblingSound" src="Lets.mp3"></audio>
+<br>
+<button onclick="location.href='index.html'">Back to Menu</button>
+<audio id="dealSound" src="https://freesound.org/data/previews/66/66717_931655-lq.mp3"></audio>
+<audio id="winSound" src="https://freesound.org/data/previews/66/66717_931655-lq.mp3"></audio>
+<audio id="loseSound" src="https://freesound.org/data/previews/66/66717_931655-lq.mp3"></audio>
 
 <script>
-let balance = Number(localStorage.getItem('balance')) || 0;
-const balanceEl = document.getElementById('balance');
-balanceEl.textContent=`Balance: $${balance}`;
-const gamblingSound = document.getElementById('gamblingSound');
+let balance = parseInt(localStorage.getItem('balance')) || 100;
+const balanceEl = document.getElementById('balanceAmount');
+const dealSound = document.getElementById('dealSound');
+const winSound = document.getElementById('winSound');
+const loseSound = document.getElementById('loseSound');
 
-function drawCard(){ return Math.floor(Math.random()*11)+1; }
+balanceEl.textContent = balance;
 
-document.getElementById('dealBtn').addEventListener('click',()=>{
-    const bet=Number(document.getElementById('blackjackBet').value);
-    if(bet<=0||bet>balance){alert('Invalid bet'); return;}
+function createCard(value) {
+  const card = document.createElement('div');
+  card.className='card';
+  card.textContent=value;
+  card.style.animation = 'dealAnimation 0.5s ease forwards';
+  return card;
+}
 
-    gamblingSound.currentTime=0; gamblingSound.loop=true; gamblingSound.play();
+function getRandomCardValue() {
+  const cards = [2,3,4,5,6,7,8,9,10,'J','Q','K','A'];
+  return cards[Math.floor(Math.random()*cards.length)];
+}
 
-    let player=drawCard()+drawCard();
-    let dealer=drawCard()+drawCard();
+function calculateScore(cards) {
+  let sum=0;
+  let aces=0;
+  cards.forEach(c => {
+    if (typeof c==='number') sum+=c;
+    else if(['J','Q','K'].includes(c)) sum+=10;
+    else if(c==='A'){ sum+=11; aces++;}
+  });
+  while(sum>21 && aces>0) {
+    sum-=10; aces--;
+  }
+  return sum;
+}
 
-    setTimeout(()=>{
-        gamblingSound.pause();
-        let msg=`You: ${player} | JackBlack: ${dealer}\n`;
-        if(player>21) {balance-=bet; msg+='You busted! You lose.';}
-        else if(dealer>21 || player>dealer){balance+=bet; msg+='You win!';}
-        else if(player===dealer){msg+='Push!';}
-        else{balance-=bet; msg+='You lose.';}
-        document.getElementById('blackjackResult').textContent=msg;
-        balanceEl.textContent=`Balance: $${balance}`;
-        localStorage.setItem('balance',balance);
-    },1000);
+document.getElementById('dealBtn').addEventListener('click', () => {
+  const bet = parseInt(document.getElementById('betInput').value);
+  if(isNaN(bet) || bet<=0 || bet>balance){
+    alert('Enter a valid bet within your balance.');
+    return;
+  }
+  // Play deal sound
+  dealSound.currentTime=0; dealSound.play();
+
+  // Clear previous cards and message
+  document.getElementById('blackjackResult').innerText='';
+  const container = document.getElementById('cardContainer');
+  container.innerHTML='';
+
+  // Draw initial cards
+  const playerCards = [getRandomCardValue(), getRandomCardValue()];
+  const dealerCards = [getRandomCardValue(), getRandomCardValue()];
+
+  // Animate dealing with a delay for each card
+  setTimeout(() => {
+    container.appendChild(createCard(playerCards[0]));
+  }, 300);
+  setTimeout(() => {
+    container.appendChild(createCard(playerCards[1]));
+  }, 600);
+  setTimeout(() => {
+    container.appendChild(createCard(dealerCards[0]));
+  }, 900);
+  setTimeout(() => {
+    container.appendChild(createCard(dealerCards[1]));
+  }, 1200);
+
+  // Wait for cards to be dealt before evaluating
+  setTimeout(() => {
+    const playerScore = calculateScore(playerCards);
+    const dealerScore = calculateScore(dealerCards);
+    let resultMsg='';
+    if (playerScore>21) {
+      balance -= bet; resultMsg='Bust! You lose.';
+    } else if (dealerScore>21 || playerScore>dealerScore) {
+      balance += bet; resultMsg='You win!';
+    } else if (playerScore===dealerScore) {
+      resultMsg='Push!';
+    } else {
+      balance -= bet; resultMsg='You lose!';
+    }
+    document.getElementById('blackjackResult').innerText=resultMsg;
+    balanceEl.textContent=balance;
+    localStorage.setItem('balance',balance);
+  }, 2000);
 });
 </script>
+
 </body>
 </html>
